Finalização das outras operações matemáticas

--- a/app/src/main/res/layout/activity_subtracao.xml
+++ b/app/src/main/res/layout/activity_subtracao.xml
@@ -2,8 +2,82 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/num1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backedit1"
     tools:context=".Subtracao">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="348dp"
+        android:layout_height="633dp"
+        android:background="@drawable/div_central"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ExtraText">
+
+        <TextView
+            android:id="@+id/textSubtracao"
+            style="@style/styleTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Subtração"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textSoma2"
+            style="@style/styleTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="-"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/num1Subt" />
+
+        <EditText
+            android:id="@+id/num1Subt"
+            style="@style/styleFieldNum"
+            android:hint="Numero 1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textSubtracao" /> />
+
+        <EditText
+            android:id="@+id/num2Subt"
+            style="@style/styleFieldNum"
+            android:layout_marginTop="148dp"
+            android:hint="Numero 2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textSubtracao" />
+
+        <Button
+            android:id="@+id/btnIgualSub"
+            style="@style/styleBtnPrincipal"
+            android:layout_width="129dp"
+            android:layout_height="102dp"
+            android:layout_marginTop="44dp"
+            android:text="="
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/num2Subt" />
+
+        <TextView
+            android:id="@+id/subtResultado"
+            style="@style/styleFieldNum"
+            android:layout_marginTop="44dp"
+            android:background="@drawable/textfields"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnIgualSub" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
