--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,12 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/txtAutoria"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backedit1"
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="348dp"
         android:layout_height="633dp"
         android:background="@drawable/div_central"
@@ -18,45 +20,59 @@
 
         <TextView
             android:id="@+id/txtCalculadora"
+            style="@style/styleTitle"
             android:text="Calculadora"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.507"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            style="@style/styleTitle" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btnSoma"
+            style="@style/styleBtnPrincipal"
             android:text="+"
             app:layout_constraintEnd_toStartOf="@+id/btnSubtracao"
             app:layout_constraintHorizontal_bias="0.343"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtCalculadora"
-            style="@style/styleBtnPrincipal" />
+            app:layout_constraintTop_toBottomOf="@+id/txtCalculadora" />
 
         <Button
             android:id="@+id/btnMultiplicacao"
+            style="@style/styleBtnPrincipal"
             android:layout_marginStart="32dp"
             android:text="*"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnSoma"
-            style="@style/styleBtnPrincipal"  />
+            app:layout_constraintTop_toBottomOf="@+id/btnSoma" />
 
         <Button
             android:id="@+id/btnDivisao"
+            style="@style/styleBtnPrincipal"
             android:text="/"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.666"
             app:layout_constraintStart_toEndOf="@+id/btnMultiplicacao"
-            app:layout_constraintTop_toBottomOf="@+id/btnSubtracao"
-            style="@style/styleBtnPrincipal" />
+            app:layout_constraintTop_toBottomOf="@+id/btnSubtracao" />
 
         <Button
             android:id="@+id/btnSubtracao"
+            style="@style/styleBtnPrincipal"
             android:layout_marginEnd="32dp"
             android:text="-"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtCalculadora"
-            style="@style/styleBtnPrincipal" />
+            app:layout_constraintTop_toBottomOf="@+id/txtCalculadora" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/txtAutoria"
+        android:layout_width="218dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="#FF0A0A"
+        android:foregroundTint="#EF0000"
+        android:text="Desenvolvido por: João Vitor Lima"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
