--- a/app/src/main/res/layout/activity_soma.xml
+++ b/app/src/main/res/layout/activity_soma.xml
@@ -41,11 +41,11 @@
 
         <EditText
             android:id="@+id/num1Soma"
+            style="@style/styleFieldNum"
             android:hint="Numero 1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textSoma"
-            style="@style/styleFieldNum" />
+            app:layout_constraintTop_toBottomOf="@+id/textSoma" />
 
         <EditText
             android:id="@+id/num2Soma"
